scala/minus2c/C.output
Terminals which are not used

   APPLY
   EMPTY


Rules never reduced

  100 external_declaration: function_definition


State 18 conflicts: 8 reduce/reduce
State 41 conflicts: 2 reduce/reduce
State 160 conflicts: 1 shift/reduce


Grammar

    0 $accept: goal $end

    1 goal: translation_unit

    2 primary_expression: IDENTIFIER
    3                   | CONSTANT
    4                   | STRING_LITERAL
    5                   | '(' expression ')'

    6 postfix_expression: primary_expression
    7                   | postfix_expression '(' ')'
    8                   | postfix_expression '(' argument_expression_list ')'

    9 argument_expression_list: assignment_expression
   10                         | argument_expression_list ',' assignment_expression

   11 unary_expression: postfix_expression
   12                 | unary_operator unary_expression

   13 unary_operator: '&'
   14               | '*'
   15               | '+'
   16               | '-'
   17               | '!'

   18 multiplicative_expression: unary_expression
   19                          | multiplicative_expression '*' unary_expression
   20                          | multiplicative_expression '/' unary_expression
   21                          | multiplicative_expression '%' unary_expression

   22 additive_expression: multiplicative_expression
   23                    | additive_expression '+' multiplicative_expression
   24                    | additive_expression '-' multiplicative_expression

   25 relational_expression: additive_expression
   26                      | relational_expression '<' additive_expression
   27                      | relational_expression '>' additive_expression
   28                      | relational_expression LE_OP additive_expression
   29                      | relational_expression GE_OP additive_expression

   30 equality_expression: relational_expression
   31                    | equality_expression EQ_OP relational_expression
   32                    | equality_expression NE_OP relational_expression

   33 assignment_expression: equality_expression
   34                      | unary_expression '=' assignment_expression

   35 expression: assignment_expression
   36           | expression ',' assignment_expression

   37 declaration: declaration_specifiers ';'
   38            | function_definition
   39            | declaration_specifiers init_declarator_list ';'

   40 declaration_specifiers: storage_class_specifier
   41                       | storage_class_specifier declaration_specifiers
   42                       | type_specifier
   43                       | type_specifier declaration_specifiers

   44 init_declarator_list: init_declarator
   45                     | init_declarator_list ',' init_declarator

   46 init_declarator: declarator
   47                | declarator '=' assignment_expression

   48 storage_class_specifier: EXTERN
   49                        | AUTO

   50 type_specifier: VOID
   51               | INT
   52               | FUNCTION

   53 declarator: direct_declarator

   54 variable_declarator: direct_variable_declarator

   55 function_declarator: direct_function_declarator

   56 direct_declarator: direct_variable_declarator
   57                  | direct_function_declarator

   58 direct_variable_declarator: IDENTIFIER
   59                           | '(' variable_declarator ')'

   60 direct_function_declarator: direct_variable_declarator '(' parameter_list ')'
   61                           | direct_variable_declarator '(' identifier_list ')'
   62                           | direct_variable_declarator '(' ')'

   63 parameter_list: parameter_declaration
   64               | parameter_list ',' parameter_declaration

   65 parameter_declaration: declaration_specifiers declarator
   66                      | declaration_specifiers abstract_declarator
   67                      | declaration_specifiers

   68 identifier_list: IDENTIFIER
   69                | identifier_list ',' IDENTIFIER

   70 abstract_declarator: direct_abstract_declarator

   71 direct_abstract_declarator: '(' abstract_declarator ')'
   72                           | '(' ')'
   73                           | '(' parameter_list ')'
   74                           | direct_abstract_declarator '(' ')'
   75                           | direct_abstract_declarator '(' parameter_list ')'

   76 statement: compound_statement
   77          | expression_statement
   78          | selection_statement
   79          | iteration_statement
   80          | jump_statement

   81 compound_statement: '{' '}'
   82                   | '{' statement_list '}'
   83                   | '{' declaration_list '}'
   84                   | '{' declaration_list statement_list '}'

   85 declaration_list: declaration
   86                 | declaration_list declaration

   87 statement_list: statement
   88               | statement_list statement

   89 expression_statement: ';'
   90                     | expression ';'

   91 selection_statement: IF '(' expression ')' statement
   92                    | IF '(' expression ')' statement ELSE statement

   93 iteration_statement: WHILE '(' expression ')' statement

   94 jump_statement: CONTINUE ';'
   95               | BREAK ';'
   96               | RETURN ';'
   97               | RETURN expression ';'

   98 translation_unit: external_declaration
   99                 | translation_unit external_declaration

  100 external_declaration: function_definition
  101                     | declaration

  102 function_definition: declaration_specifiers function_declarator compound_statement
  103                    | function_declarator compound_statement


Terminals, with rules where they appear

$end (0) 0
'!' (33) 17
'%' (37) 21
'&' (38) 13
'(' (40) 5 7 8 59 60 61 62 71 72 73 74 75 91 92 93
')' (41) 5 7 8 59 60 61 62 71 72 73 74 75 91 92 93
'*' (42) 14 19
'+' (43) 15 23
',' (44) 10 36 45 64 69
'-' (45) 16 24
'/' (47) 20
';' (59) 37 39 89 90 94 95 96 97
'<' (60) 26
'=' (61) 34 47
'>' (62) 27
'{' (123) 81 82 83 84
'}' (125) 81 82 83 84
error (256)
IDENTIFIER (258) 2 58 68 69
CONSTANT (259) 3
STRING_LITERAL (260) 4
LE_OP (261) 28
GE_OP (262) 29
EQ_OP (263) 31
NE_OP (264) 32
EXTERN (265) 48
AUTO (266) 49
INT (267) 51
VOID (268) 50
FUNCTION (269) 52
APPLY (270)
IF (271) 91 92
ELSE (272) 92
WHILE (273) 93
CONTINUE (274) 94
BREAK (275) 95
RETURN (276) 96 97
EMPTY (277)


Nonterminals, with rules where they appear

$accept (39)
    on left: 0
goal (40)
    on left: 1, on right: 0
primary_expression (41)
    on left: 2 3 4 5, on right: 6
postfix_expression (42)
    on left: 6 7 8, on right: 7 8 11
argument_expression_list (43)
    on left: 9 10, on right: 8 10
unary_expression (44)
    on left: 11 12, on right: 12 18 19 20 21 34
unary_operator (45)
    on left: 13 14 15 16 17, on right: 12
multiplicative_expression (46)
    on left: 18 19 20 21, on right: 19 20 21 22 23 24
additive_expression (47)
    on left: 22 23 24, on right: 23 24 25 26 27 28 29
relational_expression (48)
    on left: 25 26 27 28 29, on right: 26 27 28 29 30 31 32
equality_expression (49)
    on left: 30 31 32, on right: 31 32 33
assignment_expression (50)
    on left: 33 34, on right: 9 10 34 35 36 47
expression (51)
    on left: 35 36, on right: 5 36 90 91 92 93 97
declaration (52)
    on left: 37 38 39, on right: 85 86 101
declaration_specifiers (53)
    on left: 40 41 42 43, on right: 37 39 41 43 65 66 67 102
init_declarator_list (54)
    on left: 44 45, on right: 39 45
init_declarator (55)
    on left: 46 47, on right: 44 45
storage_class_specifier (56)
    on left: 48 49, on right: 40 41
type_specifier (57)
    on left: 50 51 52, on right: 42 43
declarator (58)
    on left: 53, on right: 46 47 65
variable_declarator (59)
    on left: 54, on right: 59
function_declarator (60)
    on left: 55, on right: 102 103
direct_declarator (61)
    on left: 56 57, on right: 53
direct_variable_declarator (62)
    on left: 58 59, on right: 54 56 60 61 62
direct_function_declarator (63)
    on left: 60 61 62, on right: 55 57
parameter_list (64)
    on left: 63 64, on right: 60 64 73 75
parameter_declaration (65)
    on left: 65 66 67, on right: 63 64
identifier_list (66)
    on left: 68 69, on right: 61 69
abstract_declarator (67)
    on left: 70, on right: 66 71
direct_abstract_declarator (68)
    on left: 71 72 73 74 75, on right: 70 74 75
statement (69)
    on left: 76 77 78 79 80, on right: 87 88 91 92 93
compound_statement (70)
    on left: 81 82 83 84, on right: 76 102 103
declaration_list (71)
    on left: 85 86, on right: 83 84 86
statement_list (72)
    on left: 87 88, on right: 82 84 88
expression_statement (73)
    on left: 89 90, on right: 77
selection_statement (74)
    on left: 91 92, on right: 78
iteration_statement (75)
    on left: 93, on right: 79
jump_statement (76)
    on left: 94 95 96 97, on right: 80
translation_unit (77)
    on left: 98 99, on right: 1 99
external_declaration (78)
    on left: 100 101, on right: 98 99
function_definition (79)
    on left: 102 103, on right: 38 100


state 0

    0 $accept: . goal $end

    IDENTIFIER  shift, and go to state 1
    EXTERN      shift, and go to state 2
    AUTO        shift, and go to state 3
    INT         shift, and go to state 4
    VOID        shift, and go to state 5
    FUNCTION    shift, and go to state 6
    '('         shift, and go to state 7

    goal                        go to state 8
    declaration                 go to state 9
    declaration_specifiers      go to state 10
    storage_class_specifier     go to state 11
    type_specifier              go to state 12
    function_declarator         go to state 13
    direct_variable_declarator  go to state 14
    direct_function_declarator  go to state 15
    translation_unit            go to state 16
    external_declaration        go to state 17
    function_definition         go to state 18


state 1

   58 direct_variable_declarator: IDENTIFIER .

    $default  reduce using rule 58 (direct_variable_declarator)


state 2

   48 storage_class_specifier: EXTERN .

    $default  reduce using rule 48 (storage_class_specifier)


state 3

   49 storage_class_specifier: AUTO .

    $default  reduce using rule 49 (storage_class_specifier)


state 4

   51 type_specifier: INT .

    $default  reduce using rule 51 (type_specifier)


state 5

   50 type_specifier: VOID .

    $default  reduce using rule 50 (type_specifier)


state 6

   52 type_specifier: FUNCTION .

    $default  reduce using rule 52 (type_specifier)


state 7

   59 direct_variable_declarator: '(' . variable_declarator ')'

    IDENTIFIER  shift, and go to state 1
    '('         shift, and go to state 7

    variable_declarator         go to state 19
    direct_variable_declarator  go to state 20


state 8

    0 $accept: goal . $end

    $end  shift, and go to state 21


state 9

  101 external_declaration: declaration .

    $default  reduce using rule 101 (external_declaration)


state 10

   37 declaration: declaration_specifiers . ';'
   39            | declaration_specifiers . init_declarator_list ';'
  102 function_definition: declaration_specifiers . function_declarator compound_statement

    IDENTIFIER  shift, and go to state 1
    '('         shift, and go to state 7
    ';'         shift, and go to state 22

    init_declarator_list        go to state 23
    init_declarator             go to state 24
    declarator                  go to state 25
    function_declarator         go to state 26
    direct_declarator           go to state 27
    direct_variable_declarator  go to state 28
    direct_function_declarator  go to state 29


state 11

   40 declaration_specifiers: storage_class_specifier .
   41                       | storage_class_specifier . declaration_specifiers

    EXTERN    shift, and go to state 2
    AUTO      shift, and go to state 3
    INT       shift, and go to state 4
    VOID      shift, and go to state 5
    FUNCTION  shift, and go to state 6

    $default  reduce using rule 40 (declaration_specifiers)

    declaration_specifiers   go to state 30
    storage_class_specifier  go to state 11
    type_specifier           go to state 12


state 12

   42 declaration_specifiers: type_specifier .
   43                       | type_specifier . declaration_specifiers

    EXTERN    shift, and go to state 2
    AUTO      shift, and go to state 3
    INT       shift, and go to state 4
    VOID      shift, and go to state 5
    FUNCTION  shift, and go to state 6

    $default  reduce using rule 42 (declaration_specifiers)

    declaration_specifiers   go to state 31
    storage_class_specifier  go to state 11
    type_specifier           go to state 12


state 13

  103 function_definition: function_declarator . compound_statement

    '{'  shift, and go to state 32

    compound_statement  go to state 33


state 14

   60 direct_function_declarator: direct_variable_declarator . '(' parameter_list ')'
   61                           | direct_variable_declarator . '(' identifier_list ')'
   62                           | direct_variable_declarator . '(' ')'

    '('  shift, and go to state 34


state 15

   55 function_declarator: direct_function_declarator .

    $default  reduce using rule 55 (function_declarator)


state 16

    1 goal: translation_unit .
   99 translation_unit: translation_unit . external_declaration

    IDENTIFIER  shift, and go to state 1
    EXTERN      shift, and go to state 2
    AUTO        shift, and go to state 3
    INT         shift, and go to state 4
    VOID        shift, and go to state 5
    FUNCTION    shift, and go to state 6
    '('         shift, and go to state 7

    $default  reduce using rule 1 (goal)

    declaration                 go to state 9
    declaration_specifiers      go to state 10
    storage_class_specifier     go to state 11
    type_specifier              go to state 12
    function_declarator         go to state 13
    direct_variable_declarator  go to state 14
    direct_function_declarator  go to state 15
    external_declaration        go to state 35
    function_definition         go to state 18


state 17

   98 translation_unit: external_declaration .

    $default  reduce using rule 98 (translation_unit)


state 18

   38 declaration: function_definition .
  100 external_declaration: function_definition .

    $end        reduce using rule 38 (declaration)
    $end        [reduce using rule 100 (external_declaration)]
    IDENTIFIER  reduce using rule 38 (declaration)
    IDENTIFIER  [reduce using rule 100 (external_declaration)]
    EXTERN      reduce using rule 38 (declaration)
    EXTERN      [reduce using rule 100 (external_declaration)]
    AUTO        reduce using rule 38 (declaration)
    AUTO        [reduce using rule 100 (external_declaration)]
    INT         reduce using rule 38 (declaration)
    INT         [reduce using rule 100 (external_declaration)]
    VOID        reduce using rule 38 (declaration)
    VOID        [reduce using rule 100 (external_declaration)]
    FUNCTION    reduce using rule 38 (declaration)
    FUNCTION    [reduce using rule 100 (external_declaration)]
    '('         reduce using rule 38 (declaration)
    '('         [reduce using rule 100 (external_declaration)]
    $default    reduce using rule 38 (declaration)


state 19

   59 direct_variable_declarator: '(' variable_declarator . ')'

    ')'  shift, and go to state 36


state 20

   54 variable_declarator: direct_variable_declarator .

    $default  reduce using rule 54 (variable_declarator)


state 21

    0 $accept: goal $end .

    $default  accept


state 22

   37 declaration: declaration_specifiers ';' .

    $default  reduce using rule 37 (declaration)


state 23

   39 declaration: declaration_specifiers init_declarator_list . ';'
   45 init_declarator_list: init_declarator_list . ',' init_declarator

    ','  shift, and go to state 37
    ';'  shift, and go to state 38


state 24

   44 init_declarator_list: init_declarator .

    $default  reduce using rule 44 (init_declarator_list)


state 25

   46 init_declarator: declarator .
   47                | declarator . '=' assignment_expression

    '='  shift, and go to state 39

    $default  reduce using rule 46 (init_declarator)


state 26

  102 function_definition: declaration_specifiers function_declarator . compound_statement

    '{'  shift, and go to state 32

    compound_statement  go to state 40


state 27

   53 declarator: direct_declarator .

    $default  reduce using rule 53 (declarator)


state 28

   56 direct_declarator: direct_variable_declarator .
   60 direct_function_declarator: direct_variable_declarator . '(' parameter_list ')'
   61                           | direct_variable_declarator . '(' identifier_list ')'
   62                           | direct_variable_declarator . '(' ')'

    '('  shift, and go to state 34

    $default  reduce using rule 56 (direct_declarator)


state 29

   55 function_declarator: direct_function_declarator .
   57 direct_declarator: direct_function_declarator .

    '{'       reduce using rule 55 (function_declarator)
    $default  reduce using rule 57 (direct_declarator)


state 30

   41 declaration_specifiers: storage_class_specifier declaration_specifiers .

    $default  reduce using rule 41 (declaration_specifiers)


state 31

   43 declaration_specifiers: type_specifier declaration_specifiers .

    $default  reduce using rule 43 (declaration_specifiers)


state 32

   81 compound_statement: '{' . '}'
   82                   | '{' . statement_list '}'
   83                   | '{' . declaration_list '}'
   84                   | '{' . declaration_list statement_list '}'

    IDENTIFIER      shift, and go to state 41
    CONSTANT        shift, and go to state 42
    STRING_LITERAL  shift, and go to state 43
    EXTERN          shift, and go to state 2
    AUTO            shift, and go to state 3
    INT             shift, and go to state 4
    VOID            shift, and go to state 5
    FUNCTION        shift, and go to state 6
    IF              shift, and go to state 44
    WHILE           shift, and go to state 45
    CONTINUE        shift, and go to state 46
    BREAK           shift, and go to state 47
    RETURN          shift, and go to state 48
    '('             shift, and go to state 49
    '&'             shift, and go to state 50
    '*'             shift, and go to state 51
    '+'             shift, and go to state 52
    '-'             shift, and go to state 53
    '!'             shift, and go to state 54
    ';'             shift, and go to state 55
    '{'             shift, and go to state 32
    '}'             shift, and go to state 56

    primary_expression          go to state 57
    postfix_expression          go to state 58
    unary_expression            go to state 59
    unary_operator              go to state 60
    multiplicative_expression   go to state 61
    additive_expression         go to state 62
    relational_expression       go to state 63
    equality_expression         go to state 64
    assignment_expression       go to state 65
    expression                  go to state 66
    declaration                 go to state 67
    declaration_specifiers      go to state 10
    storage_class_specifier     go to state 11
    type_specifier              go to state 12
    function_declarator         go to state 13
    direct_variable_declarator  go to state 14
    direct_function_declarator  go to state 15
    statement                   go to state 68
    compound_statement          go to state 69
    declaration_list            go to state 70
    statement_list              go to state 71
    expression_statement        go to state 72
    selection_statement         go to state 73
    iteration_statement         go to state 74
    jump_statement              go to state 75
    function_definition         go to state 76


state 33

  103 function_definition: function_declarator compound_statement .

    $default  reduce using rule 103 (function_definition)


state 34

   60 direct_function_declarator: direct_variable_declarator '(' . parameter_list ')'
   61                           | direct_variable_declarator '(' . identifier_list ')'
   62                           | direct_variable_declarator '(' . ')'

    IDENTIFIER  shift, and go to state 77
    EXTERN      shift, and go to state 2
    AUTO        shift, and go to state 3
    INT         shift, and go to state 4
    VOID        shift, and go to state 5
    FUNCTION    shift, and go to state 6
    ')'         shift, and go to state 78

    declaration_specifiers   go to state 79
    storage_class_specifier  go to state 11
    type_specifier           go to state 12
    parameter_list           go to state 80
    parameter_declaration    go to state 81
    identifier_list          go to state 82


state 35

   99 translation_unit: translation_unit external_declaration .

    $default  reduce using rule 99 (translation_unit)


state 36

   59 direct_variable_declarator: '(' variable_declarator ')' .

    $default  reduce using rule 59 (direct_variable_declarator)


state 37

   45 init_declarator_list: init_declarator_list ',' . init_declarator

    IDENTIFIER  shift, and go to state 1
    '('         shift, and go to state 7

    init_declarator             go to state 83
    declarator                  go to state 25
    direct_declarator           go to state 27
    direct_variable_declarator  go to state 28
    direct_function_declarator  go to state 84


state 38

   39 declaration: declaration_specifiers init_declarator_list ';' .

    $default  reduce using rule 39 (declaration)


state 39

   47 init_declarator: declarator '=' . assignment_expression

    IDENTIFIER      shift, and go to state 85
    CONSTANT        shift, and go to state 42
    STRING_LITERAL  shift, and go to state 43
    '('             shift, and go to state 86
    '&'             shift, and go to state 50
    '*'             shift, and go to state 51
    '+'             shift, and go to state 52
    '-'             shift, and go to state 53
    '!'             shift, and go to state 54

    primary_expression         go to state 57
    postfix_expression         go to state 58
    unary_expression           go to state 59
    unary_operator             go to state 60
    multiplicative_expression  go to state 61
    additive_expression        go to state 62
    relational_expression      go to state 63
    equality_expression        go to state 64
    assignment_expression      go to state 87


state 40

  102 function_definition: declaration_specifiers function_declarator compound_statement .

    $default  reduce using rule 102 (function_definition)


state 41

    2 primary_expression: IDENTIFIER .
   58 direct_variable_declarator: IDENTIFIER .

    '('       reduce using rule 2 (primary_expression)
    '('       [reduce using rule 58 (direct_variable_declarator)]
    ')'       reduce using rule 2 (primary_expression)
    ')'       [reduce using rule 58 (direct_variable_declarator)]
    $default  reduce using rule 2 (primary_expression)


state 42

    3 primary_expression: CONSTANT .

    $default  reduce using rule 3 (primary_expression)


state 43

    4 primary_expression: STRING_LITERAL .

    $default  reduce using rule 4 (primary_expression)


state 44

   91 selection_statement: IF . '(' expression ')' statement
   92                    | IF . '(' expression ')' statement ELSE statement

    '('  shift, and go to state 88


state 45

   93 iteration_statement: WHILE . '(' expression ')' statement

    '('  shift, and go to state 89


state 46

   94 jump_statement: CONTINUE . ';'

    ';'  shift, and go to state 90


state 47

   95 jump_statement: BREAK . ';'

    ';'  shift, and go to state 91


state 48

   96 jump_statement: RETURN . ';'
   97               | RETURN . expression ';'

    IDENTIFIER      shift, and go to state 85
    CONSTANT        shift, and go to state 42
    STRING_LITERAL  shift, and go to state 43
    '('             shift, and go to state 86
    '&'             shift, and go to state 50
    '*'             shift, and go to state 51
    '+'             shift, and go to state 52
    '-'             shift, and go to state 53
    '!'             shift, and go to state 54
    ';'             shift, and go to state 92

    primary_expression         go to state 57
    postfix_expression         go to state 58
    unary_expression           go to state 59
    unary_operator             go to state 60
    multiplicative_expression  go to state 61
    additive_expression        go to state 62
    relational_expression      go to state 63
    equality_expression        go to state 64
    assignment_expression      go to state 65
    expression                 go to state 93


state 49

    5 primary_expression: '(' . expression ')'
   59 direct_variable_declarator: '(' . variable_declarator ')'

    IDENTIFIER      shift, and go to state 41
    CONSTANT        shift, and go to state 42
    STRING_LITERAL  shift, and go to state 43
    '('             shift, and go to state 49
    '&'             shift, and go to state 50
    '*'             shift, and go to state 51
    '+'             shift, and go to state 52
    '-'             shift, and go to state 53
    '!'             shift, and go to state 54

    primary_expression          go to state 57
    postfix_expression          go to state 58
    unary_expression            go to state 59
    unary_operator              go to state 60
    multiplicative_expression   go to state 61
    additive_expression         go to state 62
    relational_expression       go to state 63
    equality_expression         go to state 64
    assignment_expression       go to state 65
    expression                  go to state 94
    variable_declarator         go to state 19
    direct_variable_declarator  go to state 20


state 50

   13 unary_operator: '&' .

    $default  reduce using rule 13 (unary_operator)


state 51

   14 unary_operator: '*' .

    $default  reduce using rule 14 (unary_operator)


state 52

   15 unary_operator: '+' .

    $default  reduce using rule 15 (unary_operator)


state 53

   16 unary_operator: '-' .

    $default  reduce using rule 16 (unary_operator)


state 54

   17 unary_operator: '!' .

    $default  reduce using rule 17 (unary_operator)


state 55

   89 expression_statement: ';' .

    $default  reduce using rule 89 (expression_statement)


state 56

   81 compound_statement: '{' '}' .

    $default  reduce using rule 81 (compound_statement)


state 57

    6 postfix_expression: primary_expression .

    $default  reduce using rule 6 (postfix_expression)


state 58

    7 postfix_expression: postfix_expression . '(' ')'
    8                   | postfix_expression . '(' argument_expression_list ')'
   11 unary_expression: postfix_expression .

    '('  shift, and go to state 95

    $default  reduce using rule 11 (unary_expression)


state 59

   18 multiplicative_expression: unary_expression .
   34 assignment_expression: unary_expression . '=' assignment_expression

    '='  shift, and go to state 96

    $default  reduce using rule 18 (multiplicative_expression)


state 60

   12 unary_expression: unary_operator . unary_expression

    IDENTIFIER      shift, and go to state 85
    CONSTANT        shift, and go to state 42
    STRING_LITERAL  shift, and go to state 43
    '('             shift, and go to state 86
    '&'             shift, and go to state 50
    '*'             shift, and go to state 51
    '+'             shift, and go to state 52
    '-'             shift, and go to state 53
    '!'             shift, and go to state 54

    primary_expression  go to state 57
    postfix_expression  go to state 58
    unary_expression    go to state 97
    unary_operator      go to state 60


state 61

   19 multiplicative_expression: multiplicative_expression . '*' unary_expression
   20                          | multiplicative_expression . '/' unary_expression
   21                          | multiplicative_expression . '%' unary_expression
   22 additive_expression: multiplicative_expression .

    '*'  shift, and go to state 98
    '/'  shift, and go to state 99
    '%'  shift, and go to state 100

    $default  reduce using rule 22 (additive_expression)


state 62

   23 additive_expression: additive_expression . '+' multiplicative_expression
   24                    | additive_expression . '-' multiplicative_expression
   25 relational_expression: additive_expression .

    '+'  shift, and go to state 101
    '-'  shift, and go to state 102

    $default  reduce using rule 25 (relational_expression)


state 63

   26 relational_expression: relational_expression . '<' additive_expression
   27                      | relational_expression . '>' additive_expression
   28                      | relational_expression . LE_OP additive_expression
   29                      | relational_expression . GE_OP additive_expression
   30 equality_expression: relational_expression .

    LE_OP  shift, and go to state 103
    GE_OP  shift, and go to state 104
    '<'    shift, and go to state 105
    '>'    shift, and go to state 106

    $default  reduce using rule 30 (equality_expression)


state 64

   31 equality_expression: equality_expression . EQ_OP relational_expression
   32                    | equality_expression . NE_OP relational_expression
   33 assignment_expression: equality_expression .

    EQ_OP  shift, and go to state 107
    NE_OP  shift, and go to state 108

    $default  reduce using rule 33 (assignment_expression)


state 65

   35 expression: assignment_expression .

    $default  reduce using rule 35 (expression)


state 66

   36 expression: expression . ',' assignment_expression
   90 expression_statement: expression . ';'

    ','  shift, and go to state 109
    ';'  shift, and go to state 110


state 67

   85 declaration_list: declaration .

    $default  reduce using rule 85 (declaration_list)


state 68

   87 statement_list: statement .

    $default  reduce using rule 87 (statement_list)


state 69

   76 statement: compound_statement .

    $default  reduce using rule 76 (statement)


state 70

   83 compound_statement: '{' declaration_list . '}'
   84                   | '{' declaration_list . statement_list '}'
   86 declaration_list: declaration_list . declaration

    IDENTIFIER      shift, and go to state 41
    CONSTANT        shift, and go to state 42
    STRING_LITERAL  shift, and go to state 43
    EXTERN          shift, and go to state 2
    AUTO            shift, and go to state 3
    INT             shift, and go to state 4
    VOID            shift, and go to state 5
    FUNCTION        shift, and go to state 6
    IF              shift, and go to state 44
    WHILE           shift, and go to state 45
    CONTINUE        shift, and go to state 46
    BREAK           shift, and go to state 47
    RETURN          shift, and go to state 48
    '('             shift, and go to state 49
    '&'             shift, and go to state 50
    '*'             shift, and go to state 51
    '+'             shift, and go to state 52
    '-'             shift, and go to state 53
    '!'             shift, and go to state 54
    ';'             shift, and go to state 55
    '{'             shift, and go to state 32
    '}'             shift, and go to state 111

    primary_expression          go to state 57
    postfix_expression          go to state 58
    unary_expression            go to state 59
    unary_operator              go to state 60
    multiplicative_expression   go to state 61
    additive_expression         go to state 62
    relational_expression       go to state 63
    equality_expression         go to state 64
    assignment_expression       go to state 65
    expression                  go to state 66
    declaration                 go to state 112
    declaration_specifiers      go to state 10
    storage_class_specifier     go to state 11
    type_specifier              go to state 12
    function_declarator         go to state 13
    direct_variable_declarator  go to state 14
    direct_function_declarator  go to state 15
    statement                   go to state 68
    compound_statement          go to state 69
    statement_list              go to state 113
    expression_statement        go to state 72
    selection_statement         go to state 73
    iteration_statement         go to state 74
    jump_statement              go to state 75
    function_definition         go to state 76


state 71

   82 compound_statement: '{' statement_list . '}'
   88 statement_list: statement_list . statement

    IDENTIFIER      shift, and go to state 85
    CONSTANT        shift, and go to state 42
    STRING_LITERAL  shift, and go to state 43
    IF              shift, and go to state 44
    WHILE           shift, and go to state 45
    CONTINUE        shift, and go to state 46
    BREAK           shift, and go to state 47
    RETURN          shift, and go to state 48
    '('             shift, and go to state 86
    '&'             shift, and go to state 50
    '*'             shift, and go to state 51
    '+'             shift, and go to state 52
    '-'             shift, and go to state 53
    '!'             shift, and go to state 54
    ';'             shift, and go to state 55
    '{'             shift, and go to state 32
    '}'             shift, and go to state 114

    primary_expression         go to state 57
    postfix_expression         go to state 58
    unary_expression           go to state 59
    unary_operator             go to state 60
    multiplicative_expression  go to state 61
    additive_expression        go to state 62
    relational_expression      go to state 63
    equality_expression        go to state 64
    assignment_expression      go to state 65
    expression                 go to state 66
    statement                  go to state 115
    compound_statement         go to state 69
    expression_statement       go to state 72
    selection_statement        go to state 73
    iteration_statement        go to state 74
    jump_statement             go to state 75


state 72

   77 statement: expression_statement .

    $default  reduce using rule 77 (statement)


state 73

   78 statement: selection_statement .

    $default  reduce using rule 78 (statement)


state 74

   79 statement: iteration_statement .

    $default  reduce using rule 79 (statement)


state 75

   80 statement: jump_statement .

    $default  reduce using rule 80 (statement)


state 76

   38 declaration: function_definition .

    $default  reduce using rule 38 (declaration)


state 77

   68 identifier_list: IDENTIFIER .

    $default  reduce using rule 68 (identifier_list)


state 78

   62 direct_function_declarator: direct_variable_declarator '(' ')' .

    $default  reduce using rule 62 (direct_function_declarator)


state 79

   65 parameter_declaration: declaration_specifiers . declarator
   66                      | declaration_specifiers . abstract_declarator
   67                      | declaration_specifiers .

    IDENTIFIER  shift, and go to state 1
    '('         shift, and go to state 116

    $default  reduce using rule 67 (parameter_declaration)

    declarator                  go to state 117
    direct_declarator           go to state 27
    direct_variable_declarator  go to state 28
    direct_function_declarator  go to state 84
    abstract_declarator         go to state 118
    direct_abstract_declarator  go to state 119


state 80

   60 direct_function_declarator: direct_variable_declarator '(' parameter_list . ')'
   64 parameter_list: parameter_list . ',' parameter_declaration

    ')'  shift, and go to state 120
    ','  shift, and go to state 121


state 81

   63 parameter_list: parameter_declaration .

    $default  reduce using rule 63 (parameter_list)


state 82

   61 direct_function_declarator: direct_variable_declarator '(' identifier_list . ')'
   69 identifier_list: identifier_list . ',' IDENTIFIER

    ')'  shift, and go to state 122
    ','  shift, and go to state 123


state 83

   45 init_declarator_list: init_declarator_list ',' init_declarator .

    $default  reduce using rule 45 (init_declarator_list)


state 84

   57 direct_declarator: direct_function_declarator .

    $default  reduce using rule 57 (direct_declarator)


state 85

    2 primary_expression: IDENTIFIER .

    $default  reduce using rule 2 (primary_expression)


state 86

    5 primary_expression: '(' . expression ')'

    IDENTIFIER      shift, and go to state 85
    CONSTANT        shift, and go to state 42
    STRING_LITERAL  shift, and go to state 43
    '('             shift, and go to state 86
    '&'             shift, and go to state 50
    '*'             shift, and go to state 51
    '+'             shift, and go to state 52
    '-'             shift, and go to state 53
    '!'             shift, and go to state 54

    primary_expression         go to state 57
    postfix_expression         go to state 58
    unary_expression           go to state 59
    unary_operator             go to state 60
    multiplicative_expression  go to state 61
    additive_expression        go to state 62
    relational_expression      go to state 63
    equality_expression        go to state 64
    assignment_expression      go to state 65
    expression                 go to state 94


state 87

   47 init_declarator: declarator '=' assignment_expression .

    $default  reduce using rule 47 (init_declarator)


state 88

   91 selection_statement: IF '(' . expression ')' statement
   92                    | IF '(' . expression ')' statement ELSE statement

    IDENTIFIER      shift, and go to state 85
    CONSTANT        shift, and go to state 42
    STRING_LITERAL  shift, and go to state 43
    '('             shift, and go to state 86
    '&'             shift, and go to state 50
    '*'             shift, and go to state 51
    '+'             shift, and go to state 52
    '-'             shift, and go to state 53
    '!'             shift, and go to state 54

    primary_expression         go to state 57
    postfix_expression         go to state 58
    unary_expression           go to state 59
    unary_operator             go to state 60
    multiplicative_expression  go to state 61
    additive_expression        go to state 62
    relational_expression      go to state 63
    equality_expression        go to state 64
    assignment_expression      go to state 65
    expression                 go to state 124


state 89

   93 iteration_statement: WHILE '(' . expression ')' statement

    IDENTIFIER      shift, and go to state 85
    CONSTANT        shift, and go to state 42
    STRING_LITERAL  shift, and go to state 43
    '('             shift, and go to state 86
    '&'             shift, and go to state 50
    '*'             shift, and go to state 51
    '+'             shift, and go to state 52
    '-'             shift, and go to state 53
    '!'             shift, and go to state 54

    primary_expression         go to state 57
    postfix_expression         go to state 58
    unary_expression           go to state 59
    unary_operator             go to state 60
    multiplicative_expression  go to state 61
    additive_expression        go to state 62
    relational_expression      go to state 63
    equality_expression        go to state 64
    assignment_expression      go to state 65
    expression                 go to state 125


state 90

   94 jump_statement: CONTINUE ';' .

    $default  reduce using rule 94 (jump_statement)


state 91

   95 jump_statement: BREAK ';' .

    $default  reduce using rule 95 (jump_statement)


state 92

   96 jump_statement: RETURN ';' .

    $default  reduce using rule 96 (jump_statement)


state 93

   36 expression: expression . ',' assignment_expression
   97 jump_statement: RETURN expression . ';'

    ','  shift, and go to state 109
    ';'  shift, and go to state 126


state 94

    5 primary_expression: '(' expression . ')'
   36 expression: expression . ',' assignment_expression

    ')'  shift, and go to state 127
    ','  shift, and go to state 109


state 95

    7 postfix_expression: postfix_expression '(' . ')'
    8                   | postfix_expression '(' . argument_expression_list ')'

    IDENTIFIER      shift, and go to state 85
    CONSTANT        shift, and go to state 42
    STRING_LITERAL  shift, and go to state 43
    '('             shift, and go to state 86
    ')'             shift, and go to state 128
    '&'             shift, and go to state 50
    '*'             shift, and go to state 51
    '+'             shift, and go to state 52
    '-'             shift, and go to state 53
    '!'             shift, and go to state 54
